--- a/pom.xml
+++ b/pom.xml
@@ -26,11 +26,11 @@
             </plugin>
         </plugins>
     </build>
-
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <kotlin.version>1.8.20-Beta</kotlin.version>
     </properties>
 
 </project>
